[tool.poetry]
name = "discord-bot-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
Flask = "^2.0.1"
qikdb = "^0.3.1"
bs4 = "^0.0.1"
youtube_dl = "^2021.6.6"
"googlesearch.py" = "^1.2"
pygelbooru = "^0.3.1"
rule34Py = "^1.3.38"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
